[project]
name = "text-summarizer-ml"
version = "0.1.0"
description = "Machine learning Project: Text Summarization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0,<2.0",
    "pandas>=1.1.0,<2.0",
    "nltk>=3.2.0",
    "tensorflow>=2.2,<2.4",
    "scikit-learn>=0.24.0,<1.0",
    "beautifulsoup4>=4.6.0",
    "lxml>=4.5.0",
    "matplotlib>=3.0.0"
]
